# ml_serve

./: Cargo.toml  README.md  build.rs  python_test.py
ml_serve/ml_serve/: base_handler.py  example_config.yaml  example_handler.py  pack_model.py  server.py
ml_serve/ml_serve/configuration/: model_config.py
proto/: predict.proto
src/: main.rs  utils.rs  worker.rs
