[package]
name = "mlhousekeeper"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
prost-types = "0.13.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "fs"] }
image = "0.25.5"
zmq = "0.10.0"
serde = { version = "1.0.212", features = ["derive"] }
serde_json = "1.0.140"
bincode = "2.0.1"
rand = "0.9.0"
base64 = "0.22.1"
[build-dependencies]
tonic-build = "0.12.3"